meta tags links

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width">
     <title>Mandala Maker</title>
 
+    <!-- Open Graph meta tags for WhatsApp preview -->
+    <meta property="og:title" content="Mandala Maker - Create Beautiful Mandalas Online">
+    <meta property="og:description" content="Design your own unique mandalas with this online tool. Customize parts, colors, and line width.">
+    <meta property="og:image" content="URL_TO_YOUR_PREVIEW_IMAGE.png">
+    <meta property="og:url" content="YOUR_WEBSITE_URL">
+    <meta property="og:type" content="website">
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
