--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph meta tags for WhatsApp preview -->
     <meta property="og:title" content="Mandala Maker - Create Beautiful Mandalas Online">
     <meta property="og:description" content="Design your own unique mandalas with this online tool. Customize parts, colors, and line width.">
-    <meta property="og:image" content="URL_TO_YOUR_PREVIEW_IMAGE.png">
+    <meta property="og:image" content="mandala-maker.png">
     <meta property="og:url" content="YOUR_WEBSITE_URL">
     <meta property="og:type" content="website">
 
