--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <h1>Mandala Maker</h1>
     <div class="container">
       <div class="controllers">
         <div class="control">
@@ -63,6 +64,7 @@
         <canvas class="base show"></canvas>
       </div>
     </div>
+    <h1>Mandala Maker</h1>
     <script src="script.js"></script>
   </body>
 </html>
