--- a/src/index.html
+++ b/src/index.html
@@ -1,70 +1,76 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Mandala Maker</title>
+    <html>
+      <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Mandala Maker</title>
 
-    <!-- Open Graph meta tags for WhatsApp preview -->
-    <meta property="og:title" content="Mandala Maker - Create Beautiful Mandalas Online">
-    <meta property="og:description" content="Design your own unique mandalas with this online tool. Customize parts, colors, and line width.">
-    <meta property="og:image" content="/src/mandala-maker.png">
-    <meta property="og:url" content="YOUR_WEBSITE_URL">
-    <meta property="og:type" content="website">
+        <!-- Open Graph meta tags for WhatsApp preview -->
+        <meta property="og:title" content="Mandala Maker - Create Beautiful Mandalas Online">
+        <meta property="og:description" content="Design your own unique mandalas with this online tool. Customize parts, colors, and line width.">
+        <meta property="og:image" content="/src/mandala-maker.png">
+        <meta property="og:url" content="YOUR_WEBSITE_URL">
+        <meta property="og:type" content="website">
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <h1>Mandala Maker</h1>
-    <div class="container">
-      <div class="controllers">
-        <div class="control">
-          <label for="parts">Parts</label><br>
-          <span class="valueDisplay" id="partsValue">12</span>
-          <input class="input" type="range" name="parts" id="parts" min="2" max="24" step="2" value="12">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+        <link href="style.css" rel="stylesheet" type="text/css" />
+      </head>
+      <body>
+        <h1>Mandala Maker</h1>
+        <div class="container">
+          <div class="controllers">
+            <div class="buttons">
+              <button onclick="toggleSettings()">
+                <i class="fas fa-cog"></i>
+                Settings
+              </button>
+              <button onclick="clearCanvas();">
+                <i class="fas fa-trash"></i>
+                Clear
+              </button>
+              <button onclick="download()">
+                <i class="fas fa-save"></i>
+                Save
+              </button>
+            </div>
+
+            <div class="settings" id="settingsPanel">
+              <div class="control">
+                <label for="parts">Parts</label><br>
+                <span class="valueDisplay" id="partsValue">12</span>
+                <input class="input" type="range" name="parts" id="parts" min="2" max="24" step="2" value="12">
+              </div>
+
+              <div class="control">
+                <label for="color">Color</label><br>
+                <input class="color" type="color" name="color" id="color" value="#ff0000">
+              </div>
+
+              <div class="control">
+                <label for="width">Line width</label><br>
+                <span class="valueDisplay" id="lineWidthValue">2</span>
+                <input class="input" type="range" name="width" id="width" min="1" max="10" step="1" value="2">
+              </div>
+
+              <div class="control">
+                <label>
+                  <input type="checkbox" onchange="setGrid(this);" checked id="gridCheckbox">
+                  Grid
+                </label>
+                <label>
+                  <input type="checkbox" onchange="setMirrored(this);" checked id="mirroredCheckbox">
+                  Mirrored
+                </label>
+              </div>
+            </div>
+          </div>
+
+          <div class="mandala">
+            <canvas class="draw"></canvas>
+            <canvas class="base show"></canvas>
+          </div>
         </div>
-
-        <div class="control">
-          <label for="color">Color</label><br>
-          <input class="color" type="color" name="color" id="color" value="#ff0000">
-        </div>
-
-        <div class="control">
-          <label for="width">Line width</label><br>
-          <span class="valueDisplay" id="lineWidthValue">2</span>
-          <input class="input" type="range" name="width" id="width" min="1" max="10" step="1" value="2">
-        </div>
-
-        <div class="control">
-          <label>
-            <input type="checkbox" onchange="setGrid(this);" checked id="gridCheckbox">
-            Grid
-          </label>
-          <label>
-            <input type="checkbox" onchange="setMirrored(this);" checked id="mirroredCheckbox">
-            Mirrored
-          </label>
-        </div>
-
-        <div class="buttons">
-          <button onclick="clearCanvas();">
-            <i class="fas fa-trash"></i>
-            Clear
-          </button>
-          <button onclick="download()">
-            <i class="fas fa-save"></i>
-            Save
-          </button>
-        </div>
-      </div>
-
-      <div class="mandala">
-        <canvas class="draw"></canvas>
-        <canvas class="base show"></canvas>
-      </div>
-    </div>
-    <h1>Mandala Maker</h1>
-    <script src="script.js"></script>
-  </body>
-</html>
+        
+        <script src="script.js"></script>
+      </body>
+    </html>
