--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
 
             <div class="settings" id="settingsPanel">
               <div class="control">
-                <label for="parts">Parts</label><br>
                 <span class="valueDisplay" id="partsValue">12</span>
+                <label for="parts">Parts</label>
                 <input class="input" type="range" name="parts" id="parts" min="2" max="24" step="2" value="12">
               </div>
 
@@ -47,8 +47,8 @@
               </div>
 
               <div class="control">
-                <label for="width">Line width</label><br>
                 <span class="valueDisplay" id="lineWidthValue">2</span>
+                <label for="width">Line width</label>
                 <input class="input" type="range" name="width" id="width" min="1" max="10" step="1" value="2">
               </div>
 
@@ -70,7 +70,7 @@
             <canvas class="base show"></canvas>
           </div>
         </div>
-        
+
         <script src="script.js"></script>
       </body>
     </html>
